--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ceren Isci - Portfolio</title>
+    <title> Suleyman Mulayim- Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <header>Ceren Isci - Portfolio</header>
+    <header>Suleyman Mulayim - Portfolio</header>
     
     <div class="container">
         <div class="section">
